--- a/templates/patient_form.html
+++ b/templates/patient_form.html
@@ -3,7 +3,7 @@
 <head>
     
     
-    <title>Patient Details</title>
+    <title>Patient Details 123</title>
       <style>
           h1 {
              font-size: 80px;
